# FYP

./: .gitignore
docker/: README.md  build_image.sh  dockerfile  install_rosdeps.sh  install_tools.sh  start_container.sh
install/: local_setup.sh  setup.sh
install/control_arm/include/control_arm/: test_motion_node.hpp
install/control_arm/lib/control_arm/: test_motion_node
install/control_arm/share/ament_index/resource_index/parent_prefix_path/: control_arm
install/control_arm/share/control_arm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_arm/share/robot_arm/: local_setup.sh  package.sh
install/robot_arm_bringup/share/robot_arm_bringup/: local_setup.sh  package.sh
install/robot_arm_bringup/share/robot_arm_bringup/scripts/: robot_arm_gazebo.sh  robot_arm_gazebo_and_moveit.sh  robot_arm_moveit_rviz.sh
install/robot_arm_description/share/ament_index/resource_index/package_run_dependencies/: robot_arm_description
install/robot_arm_description/share/robot_arm_description/: package.sh  package.xml
install/robot_arm_description/share/robot_arm_description/launch/: robot_state_publisher.launch.py
install/robot_arm_description/share/robot_arm_description/meshes/: link_1.STL  link_3.STL  link_4.STL
install/robot_arm_description/share/robot_arm_description/rviz/: robot_arm_description.rviz
install/robot_arm_description/share/robot_arm_description/urdf/robot/: arm.urdf
install/robot_arm_description/share/robot_arm_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
install/robot_arm_gazebo/share/robot_arm_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_arm_gazebo/share/robot_arm_gazebo/launch/: robot_arm.gazebo.launch.py
install/robot_arm_movit_config/share/robot_arm_movit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_arm_movit_config/share/robot_arm_movit_config/config/: initial_positions.yaml  robot_arm.srdf  robot_arm.urdf.xacro
install/robot_arm_movit_config/share/robot_arm_movit_config/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py
log/: latest_build
src/control_arm/: CMakeLists.txt
src/control_arm/launch/: test_motion.launch.py
src/control_arm/src/: test_motion_node.cpp
src/custom_hardware/: CMakeLists.txt  custom_hardware_plugin.xml  package.xml
src/custom_hardware/config/: ros2_controllers.yaml
src/custom_hardware/esp32_firmware/esp32_direct_pwm/: esp32_direct_pwm.ino
src/custom_hardware/esp32_firmware/esp32_microros_servo/: esp32_microros_servo.ino
src/custom_hardware/esp32_firmware/robot_arm_servo_controller/: robot_arm_servo_controller.ino
src/custom_hardware/include/custom_hardware/: custom_hardware.hpp  visibility_control.h
src/custom_hardware/launch/: robot_arm_hardware.launch.py
src/custom_hardware/scripts/: loop_joint1_commands.py  monitor_hardware.py  send_test_command.py  test_esp32_direct.py  test_hardware_interface.py  test_joint_movement.py
src/custom_hardware/src/: custom_hardware.cpp  joint1_loop_node.cpp  joint_state_to_esp32_bridge.cpp
src/robot_arm/: package.xml
src/robot_arm_bringup/: CMakeLists.txt  package.xml
src/robot_arm_description/: CMakeLists.txt
src/robot_arm_description/launch/: robot_state_publisher.launch.py
src/robot_arm_description/meshes/: base_link.STL  link_2.STL  link_5.STL  link_6.STL
src/robot_arm_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  robot_arm_ros2_control.urdf.xacro
src/robot_arm_description/urdf/robot/: arm.urdf  arm.urdf.xacro
src/robot_arm_gazebo/: CMakeLists.txt
src/robot_arm_gazebo/config/: ros_gz_bridge.yaml
src/robot_arm_movit_config/: CMakeLists.txt
src/robot_arm_movit_config/config/: robot_arm.ros2_control.xacro
src/robot_arm_movit_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
