<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_arm</name>
  <version>0.0.0</version>
  <description>Control package for robot_arm with MoveIt 2 motion planning</description>
  <maintainer email="jamal.el.chaar@outlook.com">jamal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>robot_arm_movit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
