<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jamal.el.chaar@outlook.com">jamal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>urdf_tutorial</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Export package path for Gazebo to find meshes -->
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
